--- a/src/Component/Project/project.css
+++ b/src/Component/Project/project.css
@@ -4,20 +4,22 @@
 }
 
 .main-conatiner h1{
-    font-size: 8rem;
+    margin-top: 20px;
+    font-size: 6rem;
     font-weight: 600;
 
 }
 
 .project-container{
     width: 90%;
-    margin: 5rem auto;
+   
     display: flex;
     justify-content: space-around;
 }
 
 .project-detail{
     width: 40%;
+    height: 200px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -27,14 +29,19 @@
 
 .project-detail img{
     width: 100%;
-    height: 200px;
+    height: 180px;
     box-sizing: border-box;
-    margin-bottom: 30px;
+  
     border-radius: 10px;
 }
+
+.detail-wrapper h1{
+    font-size: 2rem;
+}
+
 .project-detail h3{
     text-align: left;
-    font-size: 3rem;
+    font-size: 2rem;
 
 }
 .project-detail p{
