--- a/src/Component/Skills/skills.css
+++ b/src/Component/Skills/skills.css
@@ -8,7 +8,7 @@
 .skills{
     width: 100%;
     display: grid;
-    grid-template-columns: 15% 15% 15% 15%;
+    grid-template-columns: 10% 10% 10% 10%;
     grid-template-rows: auto;
     grid-gap:5%;
     
@@ -30,7 +30,7 @@
     cursor: pointer;
 }
 .skills div div {
-    width: 70%;
+    width: 50%;
     display: flex;
     align-items: center;
     height: 100px;
@@ -39,8 +39,8 @@
 }
 
 .skills div img{
-    width: 100%;
-    width: 100px;
+    width: 60%;
+   
    
 }
 .skills div p {
@@ -59,4 +59,10 @@
         grid-template-columns: 30% 30%;
         justify-content: space-around;
     }
+    .skills div img{
+        width: 40%;
+       
+       
+    }
+
 }
