--- a/src/Component/Contact/contact.css
+++ b/src/Component/Contact/contact.css
@@ -1,5 +1,6 @@
 .main-conatainer{
     width: 100%;
+    height: 100vh;
     display: flex;
     padding:4% ;
     
@@ -7,6 +8,7 @@
 
 .info-holder{
   width: 60%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   font-size: 3rem;
@@ -34,11 +36,13 @@
 
 .form-holder{
  width: 40%;
+ height: 100%;
 }
 
 .form-holder form{
     width: 100%;
     display: flex;
+    margin-top: 25%;
     flex-direction: column;
    
 }
@@ -56,7 +60,8 @@
 }
 .form-holder form textarea{
     width: 60%;
-    margin: 5% auto;
+    margin: 2% auto;
+    margin-bottom: 0;
     outline: none;
     height: 150px;
     padding: 10px;
@@ -69,7 +74,8 @@
 .form-holder form button{
     width: 100px;
     height: 40px;
-    margin: 5% auto;
+    margin: 2% auto;
+    margin-bottom: 0;
     border: 2px solid #334658;
     border-radius: 10px;
     background: #239B56;
@@ -110,10 +116,11 @@
         width: 100%;
         text-align: center;
         margin: 10rem auto;
+        margin-bottom: 2rem;
     }
     .form-holder{
         width: 100%;
-        margin: 10rem auto;
+        margin:0 auto;
     }
     .heading p{
         font-size: 6rem;
@@ -121,6 +128,9 @@
     .main-conatainer{
         display: flex;
         flex-direction: column;
+    }
+    .form-holder form{
+        margin-top: 0;
     }
 
     .form-holder form input{
@@ -135,13 +145,13 @@
     .info-holder{
         width: 100%;
         text-align: center;
-        margin: 5rem auto;
+        margin: 0 auto;
         font-size: 2.5rem;
     
     }
     .form-holder{
         width: 100%;
-        margin: 5rem auto;
+        margin: 0 auto;
     }
     .main-conatainer{
         display: flex;
